@@ -6,6 +6,9 @@ Version 1.3.1+svn:
  * language and i18n:
    * updated translations: Danish
    * new translations: Indonesian
+ * WML engine
+   * new [own_village] condition to check if someone own a particular village
+   * new [store_owned_villages] tag to store all the owned village by a side
 
 Version 1.3.1:
  * Campaignd
